[package]
name = "spore-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-sdk-rust.git" }
ckb-jsonrpc-types = "0.108.0"
spore-types = "0.2.0"
molecule = "0.7.1"
ckb-types = "0.108.0"
ckb-traits = "0.108.0"
rand = "0.8"